# test-collatz-conjecture-with-yarp-kawasetsu

code/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  collatz-conjecture.sln  run-client.sh  run-server.sh
code/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
code/client/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Client.cpp  RFMC.cpp  client.cpp  client.vcxproj  client.vcxproj.filters  cmake_install.cmake  collatz-client.sln  main.cpp
code/client/Debug/: client.ilk
code/client/client.dir/Debug/client.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
code/client/include/: Client.hpp  RFMC.hpp
code/server/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  FIFO.cpp  RFMS.cpp  RFMS.hpp  Server.cpp  cmake_install.cmake  collatz-server.sln  fifo.cpp  fifo.hpp  main.cpp  ratethread.cpp  server.cpp  server.vcxproj  server.vcxproj.filters
code/server/Debug/: server.ilk
code/server/include/: FIFO.hpp  Server.hpp  fifo.hpp
code/server/server.dir/Debug/server.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
